--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,3 +1,3 @@
-server.port:8080
-spring.cloud.stream.bindings.input: reservations
-message: HELLO world!!
+server.port:8000
+spring.cloud.stream.bindings.input: reservation
+message:HELLO worldgit init .
